--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
+    "lodash": "^4.0.1",
     "mocha": "^2.3.3",
     "node-sass": "^3.4.2",
     "phantomjs": "^1.9.18",
